Fixed #1: wrapped all elements (header,footer, sections) in corresponding div's in order to meet the layout requirements added bunch of new classes starting with  'wrapper-' prefix

--- a/css/styles.css
+++ b/css/styles.css
@@ -29,23 +29,42 @@
 
 /* container's width = 1/1 full layout width  = 1200px */
 /* for header, footer and main content, i.e. for almost everything */
-.wrapper-full { width: 1200px; }
+.wrapper-full       { width: 1200px; }
 
 /* container's width = 1/2 of layout width    = 600px */
-.wrapper-one-half { width: 600px; }
+.wrapper-one-half   { width: 600px; }
 
 /* container's width = 1/3 of layout width    = 400px  */
-.wrapper-one-third { width: 400px; } 
+/* for .services > left block (buttons) */
+.wrapper-one-third  { width: 400px; } 
+
+/* container's width = 2/3 of layout width    = 400px  */
+/* for .services > right block (content) */
+.wrapper-two-thirds { width: 800px; }
 
 /* container's width = 1/6 of layout width    = 200px */
 /* for items in .popular container */
-.wrapper-one-sixth { width: 200px; }
+.wrapper-one-sixth  { width: 200px; }
+
+/* container's width = 4/5 of layout width    = 960px */
+/* for popup 'write-us' and 'map' container */
+.wrapper-four-fifths  { width: 960px; }
+
+/* container's width = 0.4 of layout width    = 480px */
+/* for footer's central block */
+.wrapper-four-tenths  { width: 480px; }
+
+/* container's width = 0.3 of layout width    = 360px */
+/* for footer's central block */
+.wrapper-three-tenths  { width: 360px; }
+
+
 
 /* something like float: right */
-.wrapper-right { float: right; }
+.wrapper-right      { float: right; }
 
 /* something like float: left */
-.wrapper-left { float: left; }
+.wrapper-left       { float: left; }
 
 
 .main-header {}
@@ -100,8 +119,8 @@
 .navigation-list {}
 .navigation-item {}
 
-.promo-list {}
-.promo-item {}
+.promo-list { list-style: none; }
+.promo-item { display: block; }
 
 .popular-list {}
 .popular-list-item {}
